* Changes from v1.7 to v1.8 :
	- Added prettier debug prints when DEBUG is defined at compile time
	- Fixed the return code of 'read_smf_tmesh' (should be 1 if success)
	- Added a 'demo' mode (i.e. the models turn without intervention)
	- Fixed the switching between GL_LINE and GL_FILL polygon mode by 
	  forcing a call to 'rebuildList' (otherwise caused a 'black-screen'
	  syndrome, esp. in the right RawWidget)
	- Updated copyright years

* Changes from v1.6 to v1.7 :
	- Removed deprecated stuff from 'geomutils.c'
	- Better triangle area computation, and thus better degeneracy
	  handling in 'compute_error.c'
	- Removed a potential buffer overflow when refilling the buffer in 
	  'model_in.c'. The buffer will now use 'grow_array' when needed.
	- Tweaks for float_scanf on Win32 (still slow ...)
	- Replaced most of the 'grow_arrays' by single-linked lists of 
	  memory block. Much faster on Win32 than realloc-ing a big array. 
	  And not slower on Linux...

* Changes from v1.5 to v1.6 :
	- Updated the paper status in copyright headers 
	  (no longer 'submitted to' but 'accepted')
	- Added a basic PLY reader (ASCII and binary)
	- Split 'model_in.c' into per-format files

* Changes from v1.4 to v1.5 :
	- Added the possibility to display the error in grayscale (useful
	  for making screenshots that *have* to be in grayscale...)

* Changes from v1.3 to v1.4 :
	- '-malign-double' causes troubles when compiling C++ files with 
	  Qt 3.x. We now only use it when compiling C files.
	- Fixed (hopefully definitely) this lousy formatting on both the
	  external window and console.
	- Made the main widget display a caption containing the filename of
	  each model.
	- Added a basic CPU detection (Linux only) in the Makefile (mostly
	  for the Intel and PGCC compilers)

* Changes from v1.2 to v1.3 :
	- Fixed memory allocation bug for non-manifold models in
	  add_adj_face_extra() (mis-sized realloc leading to memory corruption)